# nox-uv

./: LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
src/nox_uv/: __init__.py
tests/: subnoxfile.py  test_lib.py  test_workspace.py
tests/subproject/: noxfile.py  pyproject.toml
tests/subworkspace/: noxfile.py  pyproject.toml
tests/subworkspace/package-one/: pyproject.toml
tests/subworkspace/package-one/src/package_one/: main.py
tests/subworkspace/package-two/: pyproject.toml
tests/subworkspace/package-two/src/package_two/: main.py
