[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9,<0.12" ]

[project]
name = "nox-uv"
version = "0.7.2-dev0"
description = "Facilitate nox integration with uv for Python projects"
readme = "README.md"
keywords = [ "nox", "uv" ]
license = "MIT"
license-files = [ "LICENSE.txt" ]
authors = [ { name = "Dan Tebben", email = "dantebben@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = [ "nox>=2026.2.9" ]
urls.Homepage = "https://github.com/dantebben/nox-uv"
urls.Issues = "https://github.com/dantebben/nox-uv/issues"
urls.Repository = "https://github.com/dantebben/nox-uv"

[dependency-groups]
test = [
  "pytest>=8.4",
  # TODO: Remove this upper bound when CoverageWarnings are fixed.
  "pytest-cov<7",
]
lint = [ "pyproject-fmt>=2.8", "ruff>=0.9.7" ]
type_check = [ "mypy>=1.15" ]

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 99
src = [ "src" ]
lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "ISC", # flake8-implicit-str-concat
  "N",   # pep8-naming
  "PIE", # flake8-pie
  "PT",  # flake-pytest-style
  "PTH", # flake8-use-pathlib
  "RUF", # ruff
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "UP",  # pyupgrade
]
lint.extend-ignore = [ "RUF005", "RUF012" ]
lint.unfixable = [
  # Disable removing unused imports by default and only enable within nox so editors don't delete
  # unused imports while the user is in the middle of editing a file on save.
  "F401",
]
lint.flake8-tidy-imports.ban-relative-imports = "all"
lint.isort.force-sort-within-sections = true
lint.isort.split-on-trailing-comma = false

[tool.pytest]
ini_options.addopts = [ "--strict-config", "--strict-markers" ]
ini_options.xfail_strict = true
ini_options.filterwarnings = [ "error" ]

[tool.coverage]
# The nox session that calls coverage does not find "src/nox_uv", but it is found in the

# subprocess. Coverage generates a warning that the module was not found, but coverage is actually

# run and determined in the "parallel" subprocess.

[tool.mypy]
ignore_missing_imports = true
strict = true
enable_error_code = [ "deprecated", "exhaustive-match", "explicit-override" ]
